--- a/isli-ra/src/app/content/content/content.component.scss
+++ b/isli-ra/src/app/content/content/content.component.scss
@@ -83,9 +83,10 @@
         display: block;
         height: 60px;
         padding-left: 40px;
-        line-height: 60px;
         font-size: 16px;
         color: #354754;
+        display: flex;
+        align-items: center;
       }
 
       ul {
