--- a/isli-ra/src/app/content/service-manager/service-list/service-list-shared/service-form-cn/service-form-cn.component.scss
+++ b/isli-ra/src/app/content/service-manager/service-list/service-list-shared/service-form-cn/service-form-cn.component.scss
@@ -181,4 +181,7 @@
   .ui-multiselect-panel .ui-multiselect-header .ui-multiselect-close {
     margin-top: -0.88em;
   }
+  .ui-multiselect .ui-multiselect-label {
+    height: 32px;
+  }
 }
