--- a/isli-ra/src/app/content/service-manager/target-list/target-config/target-attr-form/target-attr-form.component.html
+++ b/isli-ra/src/app/content/service-manager/target-list/target-config/target-attr-form/target-attr-form.component.html
@@ -137,6 +137,7 @@
               appValidNameUnique
               [mark]="'paramCode'"
               [entityField]="entityField"
+              [oldName]="oldEntityField.paramCode"
             />
             <mpr-form-control-valid
               controlName="paramCode"
