--- a/isli-ra/src/app/content/site-manager/site-setting/web-info/web-info.component.scss
+++ b/isli-ra/src/app/content/site-manager/site-setting/web-info/web-info.component.scss
@@ -15,7 +15,13 @@
   padding: 20px 20px;
   th,
   td {
+    position:relative;
     text-align: center !important;
+    ::ng-deep .error{
+      position: absolute;
+      top: 20px;
+      right: 10px;
+    }
   }
   h1 {
     margin: 20px 0;
